# COEBOT

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  install-cuda.bat  install-cuda.ps1  launch-windows.ps1  pyproject.toml  start_coebot.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docker/: entrypoint.sh
docs/: architecture.md
models/: README.md
portable/: BACA-DULU (READ-ME-FIRST).txt  README.md  build-portable.ps1  start_coebot.bat
scripts/: dev.ps1  smoke_ollama.py
src/doc_analyzer/: __init__.py  cli.py  config.py  memory.py  models.py  pipeline.py  server.py  store_chats.py
src/doc_analyzer/auth/: __init__.py  store.py
src/doc_analyzer/chunking/: __init__.py  text.py
src/doc_analyzer/embeddings/: __init__.py  encoder.py
src/doc_analyzer/llm/: __init__.py  client.py
src/doc_analyzer/parsers/: __init__.py  docx.py  pdf.py  xlsx.py
src/doc_analyzer/retrieval/: __init__.py  store.py
src/doc_analyzer/ui/: __init__.py  app.py  styles.py
src/doc_analyzer/webui/: app.js  index.html  login.css  styles.css
tests/: conftest.py  test_chunking_text.py  test_cli.py  test_config.py  test_embeddings_encoder.py  test_llm_client.py  test_memory.py  test_models.py  test_parsers_pdf.py  test_pipeline.py  test_retrieval_store.py
