[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "doc_analyzer"
version = "0.1.0"
description = "COEBOT — local document analysis chatbot for enterprise use (RAG over PDFs, DOCXs, XLSXs)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.14"
authors = [{ name = "Zhafir Dhafin", email = "zhafirdhafin7@gmail.com" }]
keywords = ["rag", "llm", "llama-cpp", "document-analysis", "enterprise", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pypdf>=4.3.0,<6.0",
    "pypdfium2>=4.30.0,<6.0",
    "python-docx>=1.1.0,<2.0",
    "mammoth>=1.8.0,<2.0",
    "openpyxl>=3.1.0,<4.0",
    "pandas>=2.2.0,<3.0",
    "numpy>=1.26.0,<3.0",
    "diskcache>=5.6.0,<6.0",
    # Pinned to 0.3.18: the last prebuilt CPU wheel compiled WITHOUT
    # AVX-512. Wheels 0.3.21+ enable AVX-512, which crashes with
    # STATUS_ILLEGAL_INSTRUCTION (0xc000001d) on Meteor Lake CPUs
    # (Core Ultra 185H has no AVX-512). Install with:
    #   pip install llama-cpp-python==0.3.18 --extra-index-url
    #   https://abetlen.github.io/llama-cpp-python/whl/cpu
    "llama-cpp-python==0.3.18",
    "chromadb>=0.5.0,<2.0",
    "sentence-transformers>=3.0.0,<5.0",
    "streamlit>=1.35.0,<2.0",
    "pydantic>=2.6.0,<3.0",
    "pydantic-settings>=2.2.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-requests",
    "reportlab>=4.2.0",  # generate test PDFs in fixtures, not committed binaries
]

[project.scripts]
doc-analyzer = "doc_analyzer.cli:main"

[project.urls]
Repository = "https://github.com/Zhafir24/COEBOT"
Issues = "https://github.com/Zhafir24/COEBOT/issues"

# --- Hatch build config (src layout) ---
[tool.hatch.build.targets.wheel]
packages = ["src/doc_analyzer"]

# --- Ruff: linter + formatter ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["data", "models"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear (common bugs)
    "C4",       # comprehensions
    "UP",       # pyupgrade
    "SIM",      # simplifications
    "RUF",      # ruff-specific
    "S",        # bandit (security)
    "N",        # naming
    "TID",      # tidy imports
    "PTH",      # pathlib over os.path
    "RET",      # return idioms
    "ARG",      # unused arguments
]
ignore = [
    "E501",  # line too long (formatter handles it)
    "S101",  # use of assert (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# --- MyPy: type checking ---
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
pretty = true

# Third-party libraries without type stubs.
# (chromadb and sentence_transformers ship their own stubs as of the
# versions we pin; only the truly untyped libraries remain here.)
[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "pypdf.*",
]
ignore_missing_imports = true

# --- Pytest configuration ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=doc_analyzer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "integration: integration tests that touch real services (ChromaDB, sentence-transformers)",
    "slow: tests that take more than a second",
]

[tool.coverage.run]
branch = true
source = ["src/doc_analyzer"]
omit = ["*/ui/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
